Primer Commit de AppV1 - Oswaldo

--- a/html/Ejemplo2.html
+++ b/html/Ejemplo2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Segundo Archivo html ara Git</title>
+    <title>Segundo Archivo html para Git vers. Oswaldo</title>
   </head>
   <body>
      <h2>Esta es la primera pagina creada</h2>
